--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,11 @@
 .hidden {
   display: none;
 }
+
+.font-family-inter {
+  font-family: "Inter", sans-serif;
+}
+
+.my-container {
+  max-width: 750px;
+}
