--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,3 +23,12 @@
 .my-container {
   max-width: 750px;
 }
+
+.previous {
+  transform: translateZ(40px);
+  opacity: 0.8;
+}
+
+.container {
+  max-width: 800px;
+}
