--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,5 +37,6 @@
 
   right: 0; /* this positions the button at the right of the div */
   margin: 0; /* this removes any margins from the button */
-  transform: translateX(30%) translateY(-100%) translateZ(100px); /* this moves the button 50% outside of the div border and higher on the Z axis */
+  border: 1px solid black;
+  transform: translateX(30%) translateY(-80%) translateZ(100px); /* this moves the button 50% outside of the div border and higher on the Z axis */
 }
