--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,3 +54,15 @@
   // border-radius: 5px;
   z-index: 10;
 }
+$background-color_1: rgba(0, 0, 0, 0.6);
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $background-color_1;
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
